assets/stylesheets/main.css
@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");

* {
  font-family: "Open Sans", sans-serif;
  font-weight: 200;
}

body {
  background: #111;
  color: #fff;
  transition: color 0.5s, background 1s, margin-top 0.5s;
  margin: 0;
}

.--force-black-text {
  color: #000;
}

.--no-shadow {
  box-shadow: 0px 0px 0px !important;
}

.website-background {
  z-index: -3;
  margin: 0;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  animation: fade-in 1s, un-blur 2s;
  transition: background 1s;
  background-image: url("/assets/images/background.png");
  background-repeat: no-repeat;
  background-size: cover;
}

@keyframes un-blur {
  0% {
    filter: blur(15px);
  }
  100% {
    filter: blur(0px);
  }
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.topnav {
  overflow: visible;
  background: #333;
  border-radius: 10px;
  height: 52px;
  transition: background 0.25s;
  box-shadow: 0px 0px 5px #000;
  margin: 10px 10px 0 10px;
}

.topnavicon {
  float: left;
  -webkit-tap-highlight-color: transparent;
  transition: /* opacity 0.5s */ box-shadow 0.5s;
  border-radius: 10px;
  width: 52px;
  height: 52px;
  margin-top: 0 !important;
  margin-bottom: 0 !important;
  margin-left: 0 !important;
  padding: 0 !important;
  /*   border: none !important; */
}

/* .topnavicon:active {
  border: none !important;
} */

.button {
  color: white;
  text-decoration: none;
  background: #333;
  border-radius: 10px;
  transition: background 0.25s, box-shadow 0.25s, text-shadow 0.25s, color 0.25s,
    border 0.25s;
  -webkit-tap-highlight-color: transparent;
  text-align: center;
  border: none;
  font-size: 1em;
  cursor: pointer;
  display: inline-block;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 5px;
  margin-right: 5px;
  text-decoration: none;
  padding: 16px 16px;
}
.button:hover {
  background: #555;
  box-shadow: 0px 0px 25px #333;
  z-index: 10;
  text-shadow: 0px 0px 5px #ccc;
}
.button:active {
  /*  background: #777; */
  background: #fff;
  color: #000;
  box-shadow: 0px 0px 50px #888;
  /*   border: 5px solid white; */
  text-shadow: 0px 0px 5px #555;
}

.topnavtitle {
  float: left;
  position: relative;
  left: 5px;
  height: 36px;
  margin-left: 5px;
  display: block;
  margin-top: 0 !important;
  margin-bottom: 0 !important;
  padding-bottom: 0 !important;
}

/* .topnavtitle:active {
  border: none !important;
} */

.container {
  background: #222;
  border-radius: 10px;
  transition: background 0.5s, color 0.5s;
  color: #fff;
  display: inline-block;
  padding-left: 10px;
  padding-right: 10px;
  box-shadow: 0px 0px 5px #000;
  margin-top: 10px;
  margin-bottom: 10px;
}

i {
  margin-right: 5px;
}

.container p {
  margin-top: 20px;
  margin-bottom: 10px;
}

.container .button {
  margin-top: 10px;
  margin-bottom: 20px;
}

